<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_dashboarddokter"
        android:icon="@drawable/ic_dashboard_selector"
        android:title="@string/title_dashboard"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_scandokter"
        android:icon="@drawable/ic_scan_selector"
        android:title="@string/title_scan"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_historidokter"
        android:icon="@drawable/ic_histori_selector"
        android:title="@string/title_histori"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_profiledokter"
        android:icon="@drawable/ic_profile_selector"
        android:title="@string/title_profile"
        app:showAsAction="ifRoom" />
</menu>
