<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F0"
    tools:context=".dokter.ScanDokterFragment">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="377dp"
        android:layout_height="265dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/bg_image_description"
        android:src="@drawable/rectangle2_scan_pasien" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:fontFamily="@font/inter_extrabold"
        android:text="SCAN X-RAY"
        android:textSize="20sp"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:fontFamily="@font/inter_light"
        android:lineSpacingExtra="8dp"
        android:text="@string/syarat_scan"
        android:textColor="#000000"
        android:textSize="13sp" />

    <ImageView
        android:id="@+id/xrayImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp"
        android:contentDescription="@string/xray_image_description"
        android:src="@drawable/icon_gambar_scan_pasien" />

    <ImageButton
        android:id="@+id/galleryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="53dp"
        android:layout_marginTop="600dp"
        android:background="@drawable/tombol_galeri_scan_pasien"
        android:contentDescription="@string/gallery_button_description" />

    <ImageButton
        android:id="@+id/checkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/galleryButton"
        android:layout_marginStart="50dp"
        android:layout_marginTop="600dp"
        android:background="@drawable/tombol_periksa_scan_pasien"
        android:contentDescription="@string/check_button_description" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_nav_menu_dokter" />

</RelativeLayout>
